--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,18 +1,30 @@
 # Influenced by https://github.com/strapi/community-content/issues/813#issuecomment-1205095562
 FROM node:16
 
+# Installing libvips-dev for sharp Compatability
+RUN apt-get update && apt-get install -y \
+    libvips-dev \
+    && rm -rf /var/lib/apt/lists/*
+
+ARG NODE_ENV=development
+ENV NODE_ENV=${NODE_ENV}
+
 WORKDIR /app
 
 ADD ./package.json /app
 
 ADD ./yarn.lock /app
 
-RUN yarn install --frozen-lockfile
+RUN yarn config set network-timeout 600000 -g && yarn install --frozen-lockfile
 
 ADD . /app
 
-RUN yarn seed
+RUN yarn build
+
+#RUN yarn seed
 
 EXPOSE 1337
 
-CMD ["yarn", "develop"]
+ENTRYPOINT ["/bin/sh", "-c"]
+
+CMD ["yarn seed && yarn develop"]
