--- a/docker-compose.template.yaml
+++ b/docker-compose.template.yaml
@@ -27,7 +27,7 @@ services:
       POSTGRES_PASSWORD: strapipassword
       POSTGRES_DB: strapi
     volumes:
-      - strapi-data:/var/lib/postgresql/data/
+      - strapi-data:/var/lib/postgresql
     ports:
       - "5432:5432"
 
