--- a/client/.env.development
+++ b/client/.env.development
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API_URL=http://localhost:1337
-PREVIEW_SECRET=ARNFCb9zrC9ZHm5hZzCigWivD40icS4s
+NEXT_PUBLIC_API_URL=https://deployment-5223-my-application.app.uffizzi.com
+PREVIEW_SECRET=USGmBGempHrQ9Bu5DhNXBFxa
