--- a/.github/workflows/uffizzi-previews.yaml
+++ b/.github/workflows/uffizzi-previews.yaml
@@ -102,30 +102,26 @@ jobs:
       contents: read
       pull-requests: write
 
-#  deploy-netlify-preview:
-#    name: Deploy Frontend to Netlify
-#    needs: deploy-uffizzi-preview
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout git repo
-#        uses: actions/checkout@v3
-#      - name: Override environment file.
-#        working-directory: frontend
-#        run: echo -n STRAPI_URL="https://deployment-5112-my-application.app.uffizzi.com/" >> .env
-#        #run: echo STRAPI_URL=${{ needs.deploy-uffizzi-preview.outputs.url }} > frontend/.env
-#      - uses: actions/setup-node@v3
-#        with:
-#          node-version: 14
-#      - run: npm install
-#        working-directory: frontend
-#      - run: npm run-script build
-#        env:
-#          STRAPI_URL: https://deployment-5112-my-application.app.uffizzi.com/
-#        working-directory: frontend
-#      - uses: nwtgck/actions-netlify@v1.2
-#        env:
-#          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-#          NETLIFY_SITE_ID: 70ab084a-48a1-49f8-bdc0-27d4e7596c30
-#        with:
-#          publish-dir: 'frontend/.nextjs'
-#          alias: ${{ env.BRANCH_NAME }}
+  deploy-netlify-preview:
+    name: Deploy Frontend to Netlify
+    needs: deploy-uffizzi-preview
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout git repo
+        uses: actions/checkout@v3
+      - name: Override environment file.
+        working-directory: frontend
+        run: echo -n NEXT_PUBLIC_API_URL=${{ needs.deploy-uffizzi-preview.outputs.url }} >> client/.env
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+      - run: yarn build --frozen-lockfile
+        working-directory: frontend
+        env:
+          NEXT_PUBLIC_API_URL: ${{ needs.deploy-uffizzi-preview.outputs.url }}
+      - uses: netlify/actions/cli@master
+        with:
+          args: deploy --dir=frontend
+        env:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          #NETLIFY_SITE_ID: 70ab084a-48a1-49f8-bdc0-27d4e7596c30
