--- a/.github/workflows/uffizzi-previews.yaml
+++ b/.github/workflows/uffizzi-previews.yaml
@@ -117,12 +117,12 @@ jobs:
         with:
           node-version: 16
       - run: yarn build --frozen-lockfile
-        working-directory: frontend
+        working-directory: client
         env:
           NEXT_PUBLIC_API_URL: ${{ needs.deploy-uffizzi-preview.outputs.url }}
       - uses: netlify/actions/cli@master
         with:
-          args: deploy --dir=frontend
+          args: deploy --dir=client
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           #NETLIFY_SITE_ID: 70ab084a-48a1-49f8-bdc0-27d4e7596c30
