Drop netlify GHA due to fault. https://github.com/netlify/actions/issues/57

--- a/.github/workflows/uffizzi-previews.yaml
+++ b/.github/workflows/uffizzi-previews.yaml
@@ -118,12 +118,24 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-      - run: yarn install --frozen-lockfile
-      - uses: netlify/actions/cli@master
-        with:
-          args: deploy --build --dir=client/.next
-        env:
+      - env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: d2dc8ee4-a215-4909-9f76-a2b288a57a32
           NEXT_PUBLIC_API_URL: https://deployment-5223-my-application.app.uffizzi.com
           #NEXT_PUBLIC_API_URL: ${{ needs.deploy-uffizzi-preview.outputs.url }}
+        run: |
+          yarn install --frozen-lockfile
+          npm install netlify-cli --save-dev
+
+          export OUTPUT=$(sh -c "netlify deploy --build --dir=.next")
+
+          export NETLIFY_OUTPUT=$(echo "$OUTPUT")
+          export NETLIFY_URL=$(echo "$OUTPUT" | grep -Eo '(http|https)://[a-zA-Z0-9./?=_-]*(--)[a-zA-Z0-9./?=_-]*') #Unique key: --
+          export NETLIFY_LOGS_URL=$(echo "$OUTPUT" | grep -Eo '(http|https)://app.netlify.com/[a-zA-Z0-9./?=_-]*') #Unique key: app.netlify.com
+          export NETLIFY_LIVE_URL=$(echo "$OUTPUT" | grep -Eo '(http|https)://[a-zA-Z0-9./?=_-]*' | grep -Eov "netlify.com") #Unique key: don't containr -- and app.netlify.com
+
+          echo "::set-output name=NETLIFY_OUTPUT::$NETLIFY_OUTPUT"
+          echo "::set-output name=NETLIFY_URL::$NETLIFY_URL"
+          echo "::set-output name=NETLIFY_LOGS_URL::$NETLIFY_LOGS_URL"
+          echo "::set-output name=NETLIFY_LIVE_URL::$NETLIFY_LIVE_URL"
+          echo "NETLIFY_LIVE_URL::$NETLIFY_LIVE_URL"
