--- a/.github/workflows/uffizzi-previews.yaml
+++ b/.github/workflows/uffizzi-previews.yaml
@@ -135,6 +135,7 @@ jobs:
           export NETLIFY_LIVE_URL=$(echo "$OUTPUT" | grep -Eo '(http|https)://[a-zA-Z0-9./?=_-]*' | grep -Eov "netlify.com") #Unique key: don't containr -- and app.netlify.com
 
           echo "::set-output name=NETLIFY_OUTPUT::$NETLIFY_OUTPUT"
+          echo "NETLIFY_OUTPUT::$NETLIFY_OUTPUT"
           echo "::set-output name=NETLIFY_URL::$NETLIFY_URL"
           echo "::set-output name=NETLIFY_LOGS_URL::$NETLIFY_LOGS_URL"
           echo "::set-output name=NETLIFY_LIVE_URL::$NETLIFY_LIVE_URL"
