--- a/.github/workflows/uffizzi-previews.yaml
+++ b/.github/workflows/uffizzi-previews.yaml
@@ -112,19 +112,16 @@ jobs:
     steps:
       - name: Checkout git repo
         uses: actions/checkout@v3
-      - name: Override environment file.
-        #run: echo -n NEXT_PUBLIC_API_URL=https://deployment-5223-my-application.app.uffizzi.com >> .env
-        run: echo -n NEXT_PUBLIC_API_URL=${{ needs.deploy-uffizzi-preview.outputs.url }} >> .env
       - uses: actions/setup-node@v3
         with:
           node-version: 16
       - env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: d2dc8ee4-a215-4909-9f76-a2b288a57a32
-          #NEXT_PUBLIC_API_URL: https://deployment-5223-my-application.app.uffizzi.com
-          NEXT_PUBLIC_API_URL: ${{ needs.deploy-uffizzi-preview.outputs.url }}
         run: |
           echo $NEXT_PUBLIC_API_URL
+          printf "[build]\n  base = \"./\"\n  publish = \"./.next/\"\n" >> netlify.toml
+          printf "[context.deploy-preview.environment]\n  NEXT_PUBLIC_API_URL = https://deployment-5381-my-application.app.uffizzi.com" >> netlify.toml
           yarn install --frozen-lockfile
           npm install netlify-cli --save-dev
 
