--- a/.github/workflows/uffizzi-previews.yaml
+++ b/.github/workflows/uffizzi-previews.yaml
@@ -69,7 +69,7 @@ jobs:
   deploy-uffizzi-preview:
     name: Use Remote Workflow to Preview on Uffizzi
     needs: render-compose-file
-    uses: UffizziCloud/preview-action/.github/workflows/reusable.yaml@v2.2.0
+    uses: UffizziCloud/preview-action/.github/workflows/reusable.yaml@output
     if: ${{ github.event_name == 'pull_request' && github.event.action != 'closed' }}
     with:
       compose-file-cache-key: ${{ needs.render-compose-file.outputs.compose-file-cache-key }}
@@ -116,25 +116,14 @@ jobs:
         with:
           node-version: 16
       - env:
-          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-          NETLIFY_SITE_ID: d2dc8ee4-a215-4909-9f76-a2b288a57a32
+          VERCEL_ORG_ID: y51KIOkD0p8cZFUovKidTTfx
+          VERCEL_PROJECT_ID: prj_uU20hVCNAd425Y1bG42AlpPcXgah
         run: |
+          export NEXT_PUBLIC_API_URL=${{ needs.deploy-uffizzi-preview.outputs.url }}
           echo $NEXT_PUBLIC_API_URL
-          printf "[build]\n  base = \"./client/\"\n  publish = \".next/\"\n" >> netlify.toml
-          printf "[context.deploy-preview.environment]\n  NEXT_PUBLIC_API_URL = 'https://deployment-5381-my-application.app.uffizzi.com'" >> netlify.toml
           yarn install --frozen-lockfile
-          npm install netlify-cli --save-dev
+          npm install --global vercel@latest
 
-          export OUTPUT=$(sh -c "netlify deploy --build --dir=.next")
-
-          export NETLIFY_OUTPUT=$(echo "$OUTPUT")
-          export NETLIFY_URL=$(echo "$OUTPUT" | grep -Eo '(http|https)://[a-zA-Z0-9./?=_-]*(--)[a-zA-Z0-9./?=_-]*') #Unique key: --
-          export NETLIFY_LOGS_URL=$(echo "$OUTPUT" | grep -Eo '(http|https)://app.netlify.com/[a-zA-Z0-9./?=_-]*') #Unique key: app.netlify.com
-          export NETLIFY_LIVE_URL=$(echo "$OUTPUT" | grep -Eo '(http|https)://[a-zA-Z0-9./?=_-]*' | grep -Eov "netlify.com") #Unique key: don't containr -- and app.netlify.com
-
-          echo "::set-output name=NETLIFY_OUTPUT::$NETLIFY_OUTPUT"
-          echo "NETLIFY_OUTPUT::$NETLIFY_OUTPUT"
-          echo "::set-output name=NETLIFY_URL::$NETLIFY_URL"
-          echo "::set-output name=NETLIFY_LOGS_URL::$NETLIFY_LOGS_URL"
-          echo "::set-output name=NETLIFY_LIVE_URL::$NETLIFY_LIVE_URL"
-          echo "NETLIFY_LIVE_URL::$NETLIFY_LIVE_URL"
+          vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
+          vercel build --token=${{ secrets.VERCEL_TOKEN }}
+          vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
