specify additional resuable workflow permissions.

--- a/.github/workflows/uffizzi-previews.yaml
+++ b/.github/workflows/uffizzi-previews.yaml
@@ -85,6 +85,7 @@ jobs:
     permissions:
       contents: read
       pull-requests: write
+      id-token: write
 
   delete-uffizzi-preview:
     name: Use Remote Workflow to Delete an Existing Preview
@@ -101,6 +102,7 @@ jobs:
     permissions:
       contents: read
       pull-requests: write
+      id-token: write
 
   deploy-netlify-preview:
     name: Deploy Frontend to Netlify
