--- a/.github/workflows/uffizzi-previews.yaml
+++ b/.github/workflows/uffizzi-previews.yaml
@@ -120,6 +120,7 @@ jobs:
       - env:
           VERCEL_ORG_ID: y51KIOkD0p8cZFUovKidTTfx
           VERCEL_PROJECT_ID: prj_uU20hVCNAd425Y1bG42AlpPcXgah
+        id: vercel-deploy
         run: |
           export NEXT_PUBLIC_API_URL=${{ needs.deploy-uffizzi-preview.outputs.url }}
           echo $NEXT_PUBLIC_API_URL
@@ -150,7 +151,7 @@ jobs:
           issue-number: ${{ github.event.pull_request.number }}
           body: |
             Frontend Preview deployed at Vercel URL:
-            ${{ steps.netlify-deploy.outputs.VERCEL_URL }}
+            ${{ steps.vercel-deploy.outputs.VERCEL_URL }}
           edit-mode: replace
           reactions: rocket
       - name: Update comment for Vercel deployment
@@ -161,6 +162,6 @@ jobs:
           issue-number: ${{ github.event.pull_request.number }}
           body: |
             Frontend Preview redeployed at Vercel URL:
-            ${{ steps.netlify-deploy.outputs.NETLIFY_URL }}
+            ${{ steps.vercel-deploy.outputs.NETLIFY_URL }}
           edit-mode: replace
           reactions: '+1'
