Don't build backend until runtime. https://forum.strapi.io/t/strapi-4-0-desployed-admin-keep-call-to-http-localhost-1337-admin-project-type/15028/8
Also add new credentials for admin.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ services:
   client:
     build: ./client
     environment:
-      NEXT_PUBLIC_API_URL: https://deployment-5223-my-application.app.uffizzi.com
+      NEXT_PUBLIC_API_URL: http://localhost:1337
       PREVIEW_SECRET: USGmBGempHrQ9Bu5DhNXBFxa
     ports:
       - "3000:3000"
@@ -13,7 +13,8 @@ services:
     build: ./api
     environment:
       CLIENT_URL: http://localhost:3000
-      STRAPI_ADMIN_CLIENT_URL: http://localhost:3000
+      UFFIZZI_URL: http://localhost:1337
+      STRAPI_ADMIN_CLIENT_URL: http://localhost:1337
       STRAPI_ADMIN_CLIENT_PREVIEW_SECRET: USGmBGempHrQ9Bu5DhNXBFxa
       DATABASE_CLIENT: postgres
       DATABASE_HOST: db
