--- a/.github/workflows/uffizzi-previews.yaml
+++ b/.github/workflows/uffizzi-previews.yaml
@@ -128,7 +128,7 @@ jobs:
           npm install --global vercel@latest
 
           vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
-          export OUTPUT=$(vercel deploy --token=${{ secrets.VERCEL_TOKEN }} --env NEXT_PUBLIC_API_URL="$NEXT_PUBLIC_API_URL")
+          export OUTPUT=$(vercel deploy --token=${{ secrets.VERCEL_TOKEN }} --build-env NEXT_PUBLIC_API_URL="$NEXT_PUBLIC_API_URL")
 
           echo "OUTPUT=$OUTPUT"
           echo "::set-output name=VERCEL_URL::$OUTPUT"
