--- a/.github/workflows/uffizzi-previews.yaml
+++ b/.github/workflows/uffizzi-previews.yaml
@@ -69,7 +69,7 @@ jobs:
   deploy-uffizzi-preview:
     name: Use Remote Workflow to Preview on Uffizzi
     needs: render-compose-file
-    uses: UffizziCloud/preview-action/.github/workflows/reusable.yaml@output
+    uses: UffizziCloud/preview-action/.github/workflows/reusable.yaml@labels
     if: ${{ github.event_name == 'pull_request' && github.event.action != 'closed' }}
     with:
       compose-file-cache-key: ${{ needs.render-compose-file.outputs.compose-file-cache-key }}
